--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 }
 
 dependencies {
+
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:percent:26.1.0'
@@ -32,6 +33,7 @@ dependencies {
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.synnapps:carouselview:0.1.4'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
 }
 
 
