--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.synnapps:carouselview:0.1.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
 }
 
 
