--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -75,12 +76,18 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name="iitropar.aarohan.AboutZeitgeist" />
+        <activity android:name="iitropar.aarohan.AboutZeitgeist"
+            android:theme="@style/MyActionBar"
+            android:parentActivityName=".MainActivity"/>
 
-        <activity android:name="iitropar.aarohan.ContactUS" />
-        <activity android:name="iitropar.aarohan.Developers" />
-        <activity android:name="iitropar.aarohan.Guidelines" />
-        <activity android:name="iitropar.aarohan.MyEvents" />
+        <activity android:name="iitropar.aarohan.ContactUS"
+            android:theme="@style/MyActionBar"
+            android:parentActivityName=".MainActivity"/>
+
+        <activity android:name="iitropar.aarohan.Developers"
+            android:theme="@style/MyActionBar"
+            android:parentActivityName=".MainActivity"/>
+
 
         <activity
             android:name="iitropar.aarohan.Results"
