--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.synnapps:carouselview:0.1.4'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
     compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.github.bluejamesbond:textjustify-android:2.1.6'
 }
 
 
