--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:11.8.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:animated-vector-drawable:26.1.0'
     compile 'com.android.support:percent:26.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -36,6 +37,8 @@ dependencies {
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.bluejamesbond:textjustify-android:2.1.6'
+    compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
+
 }
 
 
