--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,20 +26,26 @@
             android:name="iitropar.aarohan.SplashScreen"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+
         </activity>
         <activity
             android:name="iitropar.aarohan.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+
+        </activity>
 
         <activity android:name="iitropar.aarohan.ScheduleDay"
             android:theme="@style/MyActionBar"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity"
+            />
 
         <receiver
             android:name="iitropar.aarohan.MyReceiver"
@@ -95,11 +101,9 @@
 
         <activity
             android:name="iitropar.aarohan.Results"
-            android:parentActivityName="iitropar.aarohan.MainActivity"
-            android:theme="@style/MyActionBar"
-            android:hardwareAccelerated="false"
-            android:largeHeap="true"
-            />
+            android:theme="@style/MyActionBar">
+
+        </activity>
 
         <activity
             android:name="iitropar.aarohan.Anouncement"
@@ -109,7 +113,9 @@
         <receiver
             android:name="iitropar.aarohan.RealTimeNotificationReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true">
+
+        </receiver>
 
 
     </application>
